<resources>
    <string name="app_name">Pairandomizer</string>
    <string name="randomize" translatable="false">Randomize!</string>
    <string name="namesedit_hint">Write names here…</string>
    <string name="change_server">Change server</string>
    <string name="change_scenario">Change scenario</string>
    <string name="scenario_options">Scenario options</string>
    <string name="reload_data">Reload data</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="please_wait">Please wait</string>
    <string name="loading_data">Loading data…</string>
    <string name="error">Error</string>
    <string name="error_invalid_ip">Your server IP is invalid. You need to change it.</string>
    <string name="error_connecting">There was an error connecting to the server.</string>
    <string name="error_invalid_json">The data provided by the server is invalid.</string>
    <string name="error_saving_files">Error saving data from server.</string>
    <string name="server_info">Server info</string>
    <string name="server_info_message">Server name: %1$s\nServer comment: %2$s</string>
    <string name="enabled_scenes">Enabled scenes</string>
    <string name="info">Info</string>
    <string name="info_all_disabled">You may not disable all scenes. The first option was enabled.</string>
    <string name="error_no_names">Please enter at least one name.</string>
    <string name="about">About…</string>
    <string name="about_text">This app is Free Software and released under the GNU General
        Public License Version 2.\nYou can find the source code on GitHub.</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
