<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/change_server"
        android:title="@string/change_server"
        />
    <item
        android:id="@+id/server_info"
        android:title="@string/server_info"
        />
    <item
        android:id="@+id/reload_data"
        android:title="@string/reload_data"
        android:icon="@drawable/ic_refresh_white_24dp"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/change_scenario"
        android:title="@string/change_scenario"
        />
    <item
        android:id="@+id/scenario_options"
        android:title="@string/scenario_options"
        />
    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings_white_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/about"
        android:title="@string/about"
        />
</menu>